--- a/Sass/styles.scss
+++ b/Sass/styles.scss
@@ -590,112 +590,12 @@ body {
     padding-top: 90px;
     background-color: $mainColor;
     .none {
-      @media screen and (max-width: $width) {
+      @media screen and (max-width: $mywidth) {
         display: none;
       }
     }
-    .shownot {
-      display: none;
-      @media screen and (max-width: $width) {
-        display: block;
-      }
-      .col-md-12:first-child {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
 
-        p {
-          color: #fff;
-          font-size: 20px;
-          font-family: $myfont;
-          padding-top: 10px;
-        }
-      }
-      .col-md-12:nth-child(2) {
-        p {
-          font-weight: 400;
-          color: #fff;
-          font-size: 17px;
-          text-align: justify;
-          line-height: 210%;
-        }
-      }
-      .col-md-12:nth-child(3) {
-        label {
-          padding-top: 50px;
-          font-size: 18px;
-          line-height: 155%;
-          color: #fff;
-          font-family: $formfont;
-        }
-
-        input {
-          width: -webkit-fill-available;
-          height: 40px;
-          padding: 0px 10px;
-          border-radius: 8px 0 0 8px;
-          border: none;
-
-          outline: none;
-          ::placeholder {
-            color: rgba(0, 0, 0, 0.36);
-            :focus {
-              outline: none;
-            }
-          }
-        }
-        button {
-          background-color: #000;
-          width: 101px;
-          height: 40px;
-          border-radius: 0 8px 8px 0;
-          border: none;
-          margin-right: 5px;
-          a {
-            color: white;
-            font-size: 18px;
-            font-family: $formfont;
-            text-decoration: none;
-            @media screen and (max-width: 348px) {
-              font-size: 14px;
-            }
-          }
-        }
-      }
-      li {
-        list-style: none;
-        text-align: center;
-
-        font-weight: normal;
-        a {
-          text-decoration: none;
-          color: #fff;
-          font-size: 19px;
-          line-height: 40px;
-        }
-      }
-      li:first-child {
-        padding-top: 80px;
-      }
-      .icons {
-        display: flex;
-
-        justify-content: center;
-        margin-bottom: 40px;
-
-        div:not(:last-child) {
-          margin-right: 10%;
-        }
-      }
-      div:last-child {
-        color: white;
-        font-family: $formfont;
-        font-size: 10px;
-        line-height: 150.5%;
-        text-align: center;
-      }
-    }
-    .col-md-6:first-child {
+    .col-lg-6:first-child {
       p {
         color: #fff;
         font-size: 20px;
@@ -703,7 +603,7 @@ body {
         padding-top: 10px;
       }
     }
-    .col-md-6:nth-child(2) {
+    .col-lg-6:nth-child(2) {
       label {
         font-size: 18px;
         line-height: 155%;
@@ -745,26 +645,15 @@ body {
       font-family: $formfont;
       padding-top: 50px;
       padding-bottom: 60px;
-      // @media screen and (max-width: $width) {
-      //   .none {
-      //     display: none;
-      //   }
-      // }
 
-      .col-md-4 {
+      .col-lg-4 {
         p {
           font-weight: 400;
           color: #fff;
           font-size: 17px;
 
           line-height: 155%;
-          // @media screen and (max-width: $width) {
-          //   line-height: 210%;
-          // }
         }
-        // @media screen and (max-width: $width) {
-        //   text-align: center;
-        // }
       }
 
       li {
@@ -774,17 +663,10 @@ body {
 
         line-height: 40px;
         font-weight: normal;
-        // @media screen and (max-width: $width) {
-        //   font-size: 19px;
-        //   line-height: 60px;
-        // }
       }
       ul {
         li:first-child {
           font-size: 22px;
-          // @media screen and (max-width: $width) {
-          //   font-size: 19px;
-          // }
         }
       }
     }
@@ -800,6 +682,108 @@ body {
         display: flex;
 
         gap: 15px;
+      }
+    }
+       .shownot {
+      display: none;
+      @media screen and (max-width: $mywidth) {
+        display: block;
+      }
+      .col-lg-12:first-child {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        p {
+          color: #fff;
+          font-size: 20px;
+          font-family: $myfont;
+          padding-top: 10px;
+        }
+      }
+      .col-lg-12:nth-child(2) {
+        p {
+          font-weight: 400;
+          color: #fff;
+          font-size: 17px;
+          text-align: justify;
+          line-height: 210%;
+        }
+      }
+      .col-lg-12:nth-child(3) {
+        label {
+          padding-top: 50px;
+          font-size: 18px;
+          line-height: 155%;
+          color: #fff;
+          font-family: $formfont;
+        }
+
+        input {
+          width: -webkit-fill-available;
+          height: 40px;
+          padding: 0px 10px;
+          border-radius: 8px 0 0 8px;
+          border: none;
+           font-size: 15px ;
+
+          outline: none;
+          ::placeholder {
+            color: rgba(0, 0, 0, 0.36);
+            :focus {
+              outline: none;
+            }
+          }
+        }
+        button {
+          background-color: #000;
+          width: 101px;
+          height: 40px;
+          border-radius: 0 8px 8px 0;
+          border: none;
+          margin-right: 5px;
+          a {
+            color: white;
+            font-size: 18px;
+            font-family: $formfont;
+            text-decoration: none;
+            @media screen and (max-width: 348px) {
+              font-size: 14px;
+            }
+          }
+        }
+      }
+      li {
+        list-style: none;
+        text-align: center;
+
+        font-weight: normal;
+        a {
+          text-decoration: none;
+          color: #fff;
+          font-size: 21px;
+          line-height: 40px;
+        }
+      }
+      li:first-child {
+        padding-top: 80px;
+      }
+      .icons {
+        display: flex;
+
+        justify-content: center;
+        margin-bottom: 40px;
+
+        div:not(:last-child) {
+          margin-right: 10%;
+        }
+      }
+      div:last-child {
+        color: white;
+        font-family: $formfont;
+        font-size: 16px;
+        line-height: 150.5%;
+        text-align: center;
       }
     }
   }
